# doc-drift-detector

./: .drift.example.json  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: supported-languages.md
examples/: drift_report.md
examples/sample_repo/docs/: api.md
examples/sample_repo/src/: calculator.py
src/: __init__.py  cli.py  comparator.py  doc_parser.py  embeddings.py  parser.py  reporter.py
tests/: __init__.py  test_comparator.py  test_parser.py
